tests/toy/neg/000762_mutation.toylang
program a = { a = 0 program a = { } .; } .
